# picokit

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build_deploy.sh
src/: icsp.c  icsp.h  main.c  protocol.c  protocol.h  target.c  target.h
tools/: picokit_cli.py
